--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1> Hello world !!! </h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+ 
+<head>
+    <meta charset="utf-8">
+    <title>Harsh Singhvi</title>
+    <link rel="stylesheet" text="type/css" href="anim.css"/>
+    <link rel="stylesheet" text="type/css" href="main.css"/>
+    <script type="text/javascript" src="anim.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    
+    <script type="text/javascript">function change(id, todo){
+  if(todo.toLowerCase() === "over"){
+    var toChange = document.getElementById(id);
+    toChange.style="color: #00aeff";
+  }else{
+    var toChange = document.getElementById(id);
+    toChange.style="color: #FFFFFF";
+  }
+}</script>
+    <nav style="border-bottom: 2x solid #008037;">
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <label class="logo">Harsh<span style="color: #008037;">Singhvi</span></label>
+      <ul>
