--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
-      <label class="logo">Harsh<span style="color: #008037;">Singhvi</span></label>
+      <label class="logo">Hello<span style="color: #008037;">World</span></label>
       <ul>
