--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Harsh Singhvi</title>
+ <p style="color:red;">INSOMNIAC CODER</p>
     <link rel="stylesheet" text="type/css" href="anim.css"/>
     <link rel="stylesheet" text="type/css" href="main.css"/>
     <script type="text/javascript" src="anim.js"></script>
